2009-09-23 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsc/smsc_http.c, gwlib/cfg.def: added 
      generic-foreign-id-regex config option that allows us to substract message
      id from body content by successful submission.
      Thanks to "Franck LAMASUTA" <f.lamasuta at cobratelematics.com> for this patch.

2009-06-22 Alejandro Guerrieri <aguerrieri at kannel.org>
    * gwlib/dbpool_mssql.c: various fixes:
        - allows execution of stored procedures on mssql_select
        - fixed memory leak on mssql_select
        - fixed double free on data deallocation

2009-06-22 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: applied patch that adds handling of +CME ERROR.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.

2009-06-19 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: following changes:
        - added retrurn codes to all sending and processing PDU functions
        - dded extra errorcode when we receive malformed PDU
        - indents fixes

2009-06-19 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c, doc/userguide/userguide.xml: added possibility to bind with SSL. 

2009-06-18 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: applied patch that adds more error descriptions.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.

2009-06-18 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: removed max http server limit.

2009-06-16 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: increase max http servers from 32 to 100 and return error
      if max servers reached.

2009-06-16 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: indent fixes.

2009-06-15 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: fixed last commit that broke urls with port and query.

2009-06-11 Alexander Malysh <amalysh at kannel.org>