@@ -1,4 +1,12 @@
-2009-09-23 Alexander Malysh <amalysh at kannel.org>
+2009-06-24  Stipe Tolj  <stolj at kannel.org>
+    * acinclude.m4: fix unquoted definition warnings from bootstrap.sh run.
+    * aclocal.m4: outout of aclocal
+    * configure[.in]: fix Fedora Core 11 (x86 and amd64) build for openssl
+      detection. The static libssl.a library has been extracted from the
+      openssl-devel package and is usually now not installed on a base system
+      resulting in a failing build environment.
+
+2009-06-23 Alexander Malysh <amalysh at kannel.org>
     * doc/userguide/userguide.xml, gw/smsc/smsc_http.c, gwlib/cfg.def: added 
       generic-foreign-id-regex config option that allows us to substract message
       id from body content by successful submission.
